Fixed Model visibilities and Rating popups, Search in Project Management.

--- a/src/styles/dashboard/ApplicationDetails.css
+++ b/src/styles/dashboard/ApplicationDetails.css
@@ -1,7 +1,7 @@
 .applicationDetails {
-  position: absolute;
+  position: fixed;
   width: 734.88px;
-  min-height: 110vh;
+  min-height: 100vh;
   top: 0;
   right: 0;
   background-color: #273144;
